--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
 				<div class="content">
                     <ul>
-                        <li>Moody (work in progress)</li>
+                        <li><a href="https://github.com/AGolumbovsky/Moody">Moody</a> (work in progress)</li>
                         <li>Ducked (work in progress)</li>
                         <li>Labmatrix + Qiagram(QA, web+data)</li>
                         <li>Beam Project(QA, mobile)</li>
